syntax = "proto3";

package testing.basicclientstreaming;

option csharp_namespace = "Testing.BasicClientStreaming";

import "google/api/client.proto";

service BasicClientStreaming {
	option (google.api.default_host) = "clientstreaming.example.com";
	option (google.api.oauth_scopes) = "scope1,scope2";

	rpc MethodClient(stream Request) returns(Response);
}

message Request {
}

message Response {
}