syntax = "proto3";

package testing.serverstreaming;

option csharp_namespace = "Testing.ServerStreaming";

import "google/api/client.proto";
import "google/api/resource.proto";

service ServerStreaming {
  option (google.api.default_host) = "serverstreaming.example.com";

  // Test a server-streaming RPC with a method signature.
  rpc SignatureMethod(Request) returns(stream Response) {
    option (google.api.method_signature) = "name";
  }

  // Test a server-streaming RPC with a method signature and resource-name.
  rpc ResourcedMethod(ResourceRequest) returns(stream Response) {
    option (google.api.method_signature) = "name";
  }
}

message Request {
  string name = 1;
}

message Resource {
  option (google.api.resource) = {
    type: "serverstreaming.example.com/Resource"
    pattern: "items/{item_id}"
  };
  string name = 1;
}

message ResourceRequest {
  string name = 1 [(google.api.resource_reference).type = "serverstreaming.example.com/Resource"];
}

message Response {
}
